# gmail_chatbot

./: .env  .env.example  .gitignore  AGENTS.MD  CHANGELOG.md  README.md  __init__.py  agentic_executor.py  agentic_planner.py  api_logging.py  chat_app_st.py  debug_output.txt  disk_store.py  email_claude_api.py  email_config.py  email_gmail_api.py  email_gui.py  email_main.py  email_memory.py  email_memory_vector.py  email_vector_db.py  enhanced_memory.py  fix_token.py  memory_handler.py  minimal_import_test.py  prompt_templates.py  pyproject.toml  query_classifier.py  startup_debug_log.txt  startup_log.txt  test_guardrail_direct.py  test_output.txt  token.json  verify_logging.py
app/: __init__.py  core.py
data/: client_secret.json  token.json
gmail_chatbot/: agentic_executor.py  agentic_planner.py  agentic_runner.py  api_logging.py  disk_store.py  email_claude_api.py  email_config.py  email_gmail_api.py  email_memory_vector.py  email_vector_db.py  enhanced_memory.py  memory_handler.py  preference_detector.py  query_classifier.py  task_chain_parser.py
gui/: __init__.py
ml_classifier/: ml_query_classifier.py  test_integration.py  test_ml_classifier.py  verify_model.py
scripts/: test_guardrail_direct.py  verify_logging.py
tests/: conftest.py  test_agentic_executor.py  test_agentic_fallback.py  test_app_logic.py  test_classifier.py  test_claude_api_client.py  test_disk_store.py  test_email_gmail_api.py  test_email_search_flow.py  test_email_vector_db.py  test_enhanced_memory.py  test_initialization.py  test_memory_models.py  test_memory_writers.py  (+4 more)
(+335 files in other folders)
