[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail_chatbot"
version = "0.1.0"
description = "Gmail Chatbot Assistant"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["gmail_chatbot*"]
